# dyndns

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
dyndns/: __init__.py  __main__.py  cli.py  ipify.py  settings.py
systemd/: dyndns.service  dyndns.timer
