[tool.poetry]
name = "dyndns"
version = "1.0"
description = "Dynamic DNS update script for Route 53"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.14"
dnspython = "^2.1"
requests = "^2.25"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
